Redirect logs to stdout

--- a/supervisor.conf
+++ b/supervisor.conf
@@ -3,7 +3,13 @@ nodaemon=true
 
 [program:backuppc]
 command=/usr/share/backuppc/bin/BackupPC
+redirect_stderr=True
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 user=backuppc
 
 [program:apache-httpd]
 command=/usr/sbin/apache2ctl -DFOREGROUND
+redirect_stderr=True
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
